# mountos-admin-sdk

./: .gitignore  LICENSE  Makefile  README.md  SKILL.md  api.md  api.yaml
.claude/skills/: sdk-port.md
docs/: go.md  rust.md  ts.md
docs/design/: query-verb.md
examples/go/: go.mod  main.go
examples/rust/: Cargo.toml  main.rs
examples/ts/: main.ts  package-lock.json  package.json
go/: README.md  accounts.go  audit_logs.go  auth.go  cache.go  client.go  client_gen.go  dashboard_user.go  discover.go  errors.go  go.mod  http.go  providers.go  regions.go  resources_gen.go  service_nodes.go  storages.go  types.go  types_gen.go  users.go  volumes.go
rust/: Cargo.toml  NOTICE  README.md  api.md
rust/src/: auth.rs  client_gen.rs  dashboard_user.rs  errors.rs  http.rs  lib.rs  providers.rs  types_gen.rs
ts/: README.md  SKILL.md  api.md  api.yaml  package-lock.json  package.json
ts/src/: auth.ts  client.ts  client_gen.ts  dashboard_user.ts  errors.ts  index.ts  server.ts  types.ts  types_gen.ts
